@@ -12,13 +12,17 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.fastdelivery.domain.common.currency.CurrencyFactory;
+import ru.fastdelivery.domain.common.height.Height;
+import ru.fastdelivery.domain.common.length.Length;
 import ru.fastdelivery.domain.common.weight.Weight;
+import ru.fastdelivery.domain.common.width.Width;
 import ru.fastdelivery.domain.delivery.pack.Pack;
 import ru.fastdelivery.domain.delivery.shipment.Shipment;
 import ru.fastdelivery.presentation.api.request.CalculatePackagesRequest;
-import ru.fastdelivery.presentation.api.request.CargoPackage;
 import ru.fastdelivery.presentation.api.response.CalculatePackagesResponse;
 import ru.fastdelivery.usecase.TariffCalculateUseCase;
+
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/calculate/")
@@ -32,22 +36,27 @@ public class CalculateController {
     @PostMapping
     @Operation(summary = "Расчет стоимости по упаковкам груза")
     @ApiResponses(value = {
-        @ApiResponse(responseCode = "200", description = "Successful operation"),
-        @ApiResponse(responseCode = "400", description = "Invalid input provided")
+            @ApiResponse(responseCode = "200", description = "Successful operation"),
+            @ApiResponse(responseCode = "400", description = "Invalid input provided")
     })
     public CalculatePackagesResponse calculate(
             @Valid @RequestBody CalculatePackagesRequest request) {
-        var packsWeights = request.packages().stream()
-                .map(CargoPackage::weight)
-                .map(Weight::new)
-                .map(Pack::new)
-                .toList();
+        var packsWeights = request.packages().stream().map(rec -> {
+            return new Pack(new Weight(rec.weight()), new Height(rec.height()), new Length(rec.length()), new Width(rec.width()));
+
+        }).collect(Collectors.toList());
+
+//                .map(CargoPackage::weight)
+//                .map(Weight::new)
+//                .map(Pack::new)
+//                .toList();
 
         var shipment = new Shipment(packsWeights, currencyFactory.create(request.currencyCode()));
         var calculatedPrice = tariffCalculateUseCase.calc(shipment);
         var minimalPrice = tariffCalculateUseCase.minimalPrice();
 
-        log.info("CalculatePackagesResponse  calculate " +  request
+
+        log.info("CalculatePackagesResponse  calculate " + request
                 + " packsWeights " + packsWeights + " shipment "
                 + shipment + " calculatedPrice " + calculatedPrice + " minimalPrice " + minimalPrice);
 
